Changelog
=========

2019.6.4 (unreleased)
------------------------

- Bump ftw.solr version to 2.8.2 to get fix for millisecond rounding error. [njohner]


2019.6.3 (2020-02-06)
---------------------

- Bump ftw.solr to 2.8.1 for to_iso8601 fix for years before 1900. [deiferni]
- Handle path depth when filtering a table. [njohner]


2019.6.2 (2020-01-29)
---------------------

- Add upgrade step to correct public_trial_statement type. [njohner]


2019.6.1 (2020-01-26)
---------------------

- Add 'filing_no' field to Solr schema. [lgraf]
- Fix to reassign a task to a new inbox group. [elioschmutz]
- When tearing down test layer, wait for solr to be torn down properly. [siegy]
- Configure Solr replication handler. [buchi]


2019.6.0 (2020-01-09)
---------------------

- Update Solr to version 8.4.0. [buchi]


2019.5.1 (2020-01-09)
---------------------

- Include permissions.zcml of Products.CMFEditions. [lgraf]


2019.5.0 (2019-12-10)
---------------------

- Bump ftw.solr to 2.8.0 to get support for uploading blobs. [lgraf]
- Add custom IWarmupPerformer to also warm up GEVER's trashed index. [lgraf]


2019.5.0rc1 (2019-12-03)
------------------------

- Make Period a proper plone content type. Migrate old SQL base periods. [deiferni]
- Restrict available users in sharing on workspaces and workspace folders. [njohner]
- Correct styling bug fix in tabbedview after showing bumblebee tooltip. [njohner]


2019.4.2 (2019-11-29)
---------------------

- Register virtual host monster on site setup for testserver [bierik]
- Catch oneoffixx api calls failures and show statusmessage instead. [phgross]
- Fix setting agenda item description. [deiferni]
- Fix automatic start of additionally added sequential tasks. [phgross]
- Fix styling bug in tabbedview after showing bumblebee tooltip. [njohner]
- Only show workspace notification tab when feature is activated. [njohner]
- Fix response text for responsible changes to the same user. [phgross]