@@ -5,6 +5,7 @@ Changelog
 ------------------------
 
 - Bump ftw.solr version to 2.8.2 to get fix for millisecond rounding error. [njohner]
+- Fix solr complex search pattern configuration. [deiferni]
 
 
 2019.6.3 (2020-02-06)
